--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,9 +28,9 @@
         </div>
         <div class="right-part-menu">
             <ul>
-                <li><a id="signUp"href="/sign-up">Registrujte se</a></li>
+                <li><a id="register"href="/register">Registrujte se</a></li>
                 <li><a id="login"href="/login">Prijavite se</a></li>
-                <li><a id="logout" href="/logout">Odlogujte se</a></li>
+
             </ul>
         </div>
     </div>
