--- a/website/static/register.css
+++ b/website/static/register.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-.prijava{
+.registracija{
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 300px;
     align-items: center;
-    margin: 150px 0 0 618px;
+    margin: 100px 0 0 618px;
 }
 .prijava-text{
     font-family: Roboto, Arial;
@@ -27,6 +27,8 @@
     padding-left: 10px;
     font-family: Roboto, Arial;
     font-size: 17px;
+    color: rgb(10, 10, 15);
+
 
 }
 .prijava-tab:focus{
@@ -56,13 +58,4 @@
 }
 .uredjivanje-texta{
     color: rgb(51, 51, 204);
-}
-.logout-icon{
-    width: 15px;
-    height: 15px;
-    margin: -58px 0 0 1470px;
-    background-color: rgb(255, 77, 77);
-}
-.logout-button{
-    border: none;
 }
