--- a/website/static/register.css
+++ b/website/static/register.css
@@ -23,7 +23,9 @@
     border-width: 1px;
 }
 
-.prijava-tab[type="text"]{
+.prijava-tab[type="text"],
+.prijava-tab[type="email"],
+.prijava-tab[type="password"]{
     padding-left: 10px;
     font-family: Roboto, Arial;
     font-size: 17px;
@@ -39,7 +41,7 @@
 
 }
 
-.prijava-button{
+.prijava-button[type="submit"]{
     width: 200px;
     margin: 0 50px 20px 50px;
     align-items: center;
@@ -47,7 +49,6 @@
     background-color: rgb(51, 51, 204);
     color: white;
     border-width: 0;
-    cursor:pointer;
     border-style: solid;
 
 }
