--- a/website/static/register.css
+++ b/website/static/register.css
@@ -12,7 +12,7 @@
     font-family: Roboto, Arial;
     font-size: 24px;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin: 0 0 20px 62px;
 }
 .prijava-tab{
     height: 40px;
@@ -43,7 +43,7 @@
 
 .prijava-button[type="submit"]{
     width: 200px;
-    margin: 0 50px 20px 50px;
+    margin: 0 50px 20px 55px;
     align-items: center;
     height: 50px;
     background-color: rgb(51, 51, 204);
@@ -56,7 +56,13 @@
     font-family: Roboto, Arial;
     font-size: 14px;
     font-weight: 400px;
+    margin-left: 55px;
 }
 .uredjivanje-texta{
     color: rgb(51, 51, 204);
+}
+.upozorenje{
+    width: 30%;
+    padding-left: 50px;
+    background-color: rgb(232, 125, 134);
 }
