--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -41,18 +41,36 @@
         <div class="alert alert-warning alert-dismissible fade show" role="alert"
              style="width: max-content;
                     background-color: rgb(232, 125, 134);
-                    margin-left: 609.6px;">
+                    margin-left: 609.6px;
+                    padding: 10px 20px 10px 20px;
+                    text-align: center;">
             <span>{{ message }}</span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+                    style="width: 20px;
+                           outline: none;
+                           border:none;
+                           background-color: rgb(232, 125, 134);
+                           color: white;">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
 
 
         {% else %}
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+         <div class="alert alert-warning alert-dismissible fade show" role="alert"
+             style="width: 305px;
+                    background-color: rgb(74, 194, 107);
+                    margin-left: 609.6px;
+                    padding: 10px 20px 10px 20px;
+                    text-align: center;">
             <span>{{ message }}</span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+                    style="width: 20px;
+                           outline: none;
+                           border:none;
+                           background-color: rgb(74, 194, 107);
+                           color: white; ">
+
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
