--- a/website/static/register.css
+++ b/website/static/register.css
@@ -12,7 +12,7 @@
     font-family: Roboto, Arial;
     font-size: 24px;
     font-weight: 700;
-    margin: 0 0 20px 62px;
+    margin: 0 60px 20px;
 }
 .prijava-tab{
     height: 40px;
@@ -56,7 +56,8 @@
     font-family: Roboto, Arial;
     font-size: 14px;
     font-weight: 400px;
-    margin-left: 55px;
+    padding: 0 0 20px 55px;
+
 }
 .uredjivanje-texta{
     color: rgb(51, 51, 204);
@@ -65,4 +66,5 @@
     width: 30%;
     padding-left: 50px;
     background-color: rgb(232, 125, 134);
+
 }
