--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -9,14 +9,24 @@
 
         </button>
     </div>
-    <div class="prijava">
-         <div class="prijava-text">PRIJAVA</div>
-         <input class="prijava-tab" type="text" placeholder="E-mail">
-         <input class="prijava-tab" type="text" placeholder="Vaša lozinka">
-         <button class="prijava-button">PRIJAVA</button>
-         <div class="nalog">Niste jos registrovani?
-             <a class="uredjivanje-texta" href="/register">Otvorite nalog</div>
+    <div>
+        <div class="prijava">
+        <form method="POST">
+             <div class="prijava-text">PRIJAVA</div>
+              <div class="form-group">
+                <label class="label-text" for="email">Email Adresa</label>
+                <input class="prijava-tab" type="email" id="email" name="email" placeholder="Email adresa">
+              </div>
+             <div class="form-group">
+                <label class="label-text1" for="lozinka1">Lozinka</label>
+                <input class="prijava-tab" type="password" id="lozinka1" name="lozinka1" placeholder="Vaša lozinka">
+             </div>
+             <button class="prijava-button">PRIJAVA</button>
+             <div class="nalog">Niste jos registrovani?
+                 <a class="uredjivanje-texta" href="/register">Otvorite nalog</div>
+        </div>
     </div>
+
 {% endblock %}
 
 
