New update with registration and login working

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -18,12 +18,14 @@
                 <input class="prijava-tab" type="email" id="email" name="email" placeholder="Email adresa">
               </div>
              <div class="form-group">
-                <label class="label-text1" for="lozinka1">Lozinka</label>
-                <input class="prijava-tab" type="password" id="lozinka1" name="lozinka1" placeholder="Vaša lozinka">
+                <label class="label-text1" for="lozinka">Lozinka</label>
+                <input class="prijava-tab" type="password" id="lozinka" name="lozinka" placeholder="Vaša lozinka">
              </div>
              <button class="prijava-button">PRIJAVA</button>
              <div class="nalog">Niste jos registrovani?
-                 <a class="uredjivanje-texta" href="/register">Otvorite nalog</div>
+                 <a class="uredjivanje-texta" href="/register">Otvorite nalog</a>
+             </div>
+        </form>
         </div>
     </div>
 
