--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-</div>
+<div>
      <div class="registracija">
          <form method="POST">
          <div class="prijava-text">REGISTRACIJA</div>
@@ -30,8 +30,9 @@
          </div>
          <button type="submit" class="prijava-button">REGISTRUJTE SE</button>
          <div class="nalog">Već imate nalog?
-             <a class="uredjivanje-texta" href="/login">Prijavite se
+             <a class="uredjivanje-texta" href="/login">Prijavite se</a>
          </div>
          </form>
-    </div>
+     </div>
+</div>
 {% endblock %}
