--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,6 +10,7 @@
     <div class="menu">
         <div class="left-part-menu">
             <ul>
+                {% if korisnik.is_authenticated%}
                 <li><a id="home" href="/home">Početna stranica</a></li>
                 <li><a id="omeni" href="/omeni">O meni&#9660;</a>
                     <ul class="dropdown">
@@ -17,6 +18,7 @@
                         <li><a id="mpismo" href="/mpismo">Motivaciono pismo</a></li>
                         <li><a id="linkedin" href="/linkedin">Linkedin profil</a></li>
                         <li><a id="youtube" href="/youtube">Youtube profil</a></li>
+                        {% endif %}
                     </ul>
                 </li>
             </ul>
@@ -28,11 +30,14 @@
         </div>
         <div class="right-part-menu">
             <ul>
-                <li><a id="register"href="/register">Registrujte se</a></li>
-                <li><a id="login"href="/login">Prijavite se</a></li>
-
+                <li><a id="register" href="/register">Registrujte se</a></li>
+                <li><a id="login" href="/login">Prijavite se</a></li>
+                {% if korisnik.is_authenticated%}
+                <li><a id="logout" href="/logout">Odjava</a></li>
+                {% endif %}
             </ul>
         </div>
+
     </div>
     {% with messages = get_flashed_messages(with_categories=true)%}
     {% if messages %}
