--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,3 +1,91 @@
-{% extends "base.html" %}
-{%block content%}
-{%endblock%}
+<!doctype html>
+<html lang="en">
+<head>
+  <title>{% block title %}Title{% endblock %}</title>
+    <link rel="stylesheet" href="static/base.css">
+    <link rel="stylesheet" href="static/register.css">
+</head>
+<body>
+
+    <div class="menu">
+        <div class="left-part-menu">
+            <ul>
+                <li><a id="home" href="/home">Početna stranica</a></li>
+                <li><a id="omeni" href="/omeni">O meni&#9660;</a>
+                    <ul class="dropdown">
+                        <li><a id="cv" href="/cv">CV</a></li>
+                        <li><a id="mpismo" href="/mpismo">Motivaciono pismo</a></li>
+                        <li><a id="linkedin" href="/linkedin">Linkedin profil</a></li>
+                        <li><a id="youtube" href="/youtube">Youtube profil</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="middle-part-menu">
+            <a href="http://127.0.0.1:5000/youtube">
+            <img class="logo1" src="static/the-ball-game-logo.jpg">
+            </a>
+        </div>
+        <div class="right-part-menu">
+            <ul>
+                <li><a id="register" href="/register">Registrujte se</a></li>
+                <li><a id="login" href="/login">Prijavite se</a></li>
+                <li><a id="logout" href="/logout">Odjava</a></li>
+            </ul>
+        </div>
+
+    </div>
+    {% with messages = get_flashed_messages(with_categories=true)%}
+    {% if messages %}
+        {% for category, message in messages %}
+        {% if category == 'error'%}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert"
+             style="width: max-content;
+                    background-color: rgb(232, 125, 134);
+                    margin-left: 609.6px;
+                    padding: 10px 20px 10px 20px;
+                    text-align: center;">
+            <span>{{ message }}</span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+                    style="width: 20px;
+                           outline: none;
+                           border:none;
+                           background-color: rgb(232, 125, 134);
+                           color: white;">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+
+        {% else %}
+         <div class="alert alert-warning alert-dismissible fade show" role="alert"
+             style="width: 305px;
+                    background-color: rgb(74, 194, 107);
+                    margin-left: 609.6px;
+                    padding: 10px 20px 10px 20px;
+                    text-align: center;">
+            <span>{{ message }}</span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+                    style="width: 20px;
+                           outline: none;
+                           border:none;
+                           background-color: rgb(74, 194, 107);
+                           color: white; ">
+
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% endif %}
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    {% block content %}
+
+    {% endblock %}
+
+</body>
+</html>
