--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width", initial-scale="1" >
   <title>{% block title %}Title{% endblock %}</title>
     <link rel="stylesheet" href="static/base.css">
-    <link rel="stylesheet" href="static/register.css">
 </head>
 <body>
 
