--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,38 +1,40 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='register.css') }}"
+<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='register.css') }}">
 
-{% extends 'base.html' %}
+
+{% extends "base.html" %}
 {% block content %}
 
 
-<div>
-     <div class="registracija">
-         <form method="POST">
-         <div class="prijava-text">REGISTRACIJA</div>
-         <div class="form-group">
-             <label for="ime">Ime</label>
-             <input class="prijava-tab" type="text" id="ime" name="ime" placeholder="Ime">
-         </div>
-         <div class="form-group">
-             <label for="prezime">Prezime</label>
-             <input class="prijava-tab" type="text" id="prezime" name="prezime" placeholder="Prezime">
-         </div>
-         <div class="form-group">
-             <label for="email">Email Adresa</label>
-             <input class="prijava-tab" type="email" id="email" name="email" placeholder="Email adresa">
-         </div>
-         <div class="form-group">
-             <label for="lozinka1">Lozinka</label>
-             <input class="prijava-tab" type="password" id="lozinka1" name="lozinka1" placeholder="Vaša lozinka">
-         </div>
-         <div class="form-group">
-             <label for="lozinka2">Potvrdite lozinku</label>
-             <input class="prijava-tab" type="password" id="lozinka2" name="lozinka2" placeholder="Potvrdite vašu lozinku">
-         </div>
-         <button type="submit" class="prijava-button">REGISTRUJTE SE</button>
-         <div class="nalog">Već imate nalog?
-             <a class="uredjivanje-texta" href="/login">Prijavite se</a>
-         </div>
-         </form>
-     </div>
-</div>
+        <div>
+             <div class="registracija">
+                 <form method="POST">
+                 <div class="prijava-text">REGISTRACIJA</div>
+                 <div class="form-group">
+                     <label for="ime">Ime</label>
+                     <input class="prijava-tab" type="text" id="ime" name="ime" placeholder="Ime">
+                 </div>
+                 <div class="form-group">
+                     <label for="prezime">Prezime</label>
+                     <input class="prijava-tab" type="text" id="prezime" name="prezime" placeholder="Prezime">
+                 </div>
+                 <div class="form-group">
+                     <label for="email">Email Adresa</label>
+                     <input class="prijava-tab" type="email" id="email" name="email" placeholder="Email adresa">
+                 </div>
+                 <div class="form-group">
+                     <label for="lozinka1">Lozinka</label>
+                     <input class="prijava-tab" type="password" id="lozinka1" name="lozinka1" placeholder="Vaša lozinka">
+                 </div>
+                 <div class="form-group">
+                     <label for="lozinka2">Potvrdite lozinku</label>
+                     <input class="prijava-tab" type="password" id="lozinka2" name="lozinka2" placeholder="Potvrdite vašu lozinku">
+                 </div>
+                 <button type="submit" class="prijava-button">REGISTRUJTE SE</button>
+                 <div class="nalog">Već imate nalog?
+                     <a class="uredjivanje-texta" href="/login">Prijavite se</a>
+                 </div>
+                 </form>
+             </div>
+        </div>
 {% endblock %}
