--- a/website/static/login.css
+++ b/website/static/login.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-.prijava{
+.login{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,13 +9,13 @@
     margin: 50px 0 0 618px;
     text-align: center;
 }
-.prijava-text{
+.login-text{
     font-family: Roboto, Arial;
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 20px;
 }
-.prijava-tab{
+.login-tab{
     height: 40px;
     width: 300px;
     margin-bottom: 20px;
@@ -24,14 +24,14 @@
     border-width: 1px;
 }
 
-.prijava-tab[type="text"]{
+.login-tab[type="text"]{
     padding-left: 10px;
     font-family: Roboto, Arial;
     font-size: 17px;
 
 
 }
-.prijava-tab:focus{
+.login-tab:focus{
     border-width 1px;
     border-color: gray;
     border-style:solid;
@@ -39,7 +39,7 @@
 
 }
 
-.prijava-button{
+.login-button{
     width: 200px;
     margin: 0 50px 20px 50px;
     align-items: center;
@@ -51,7 +51,7 @@
     border-style: solid;
 
 }
-.nalog{
+.profile{
     font-family: Roboto, Arial;
     font-size: 20px;
     font-weight: 400px;
@@ -60,7 +60,7 @@
     white-space: nowrap;
 
 }
-.uredjivanje-texta{
+.text-edit{
     color: rgb(51, 51, 204);
 
 }
