--- a/website/templates/mpismo.html
+++ b/website/templates/mpismo.html
@@ -43,6 +43,9 @@
     <div class="line1">
 
     </div>
+    <div class="full-text">
+      <p class="text-edit"> Motivaciono pismo </p>
+    </div>
     </div>
    </div>
 
