--- a/website/static/register.css
+++ b/website/static/register.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-.registracija{
+.register{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,13 +8,13 @@
     align-items: center;
     margin: 50px 0 0 618px;
 }
-.prijava-text{
+.register-text{
     font-family: Roboto, Arial;
     font-size: 24px;
     font-weight: 700;
     margin: 0 60px 20px;
 }
-.prijava-tab{
+.register-tab{
     height: 40px;
     width: 300px;
     margin-bottom: 20px;
@@ -23,9 +23,9 @@
     border-width: 1px;
 }
 
-.prijava-tab[type="text"],
-.prijava-tab[type="email"],
-.prijava-tab[type="password"]{
+.register-tab[type="text"],
+.register-tab[type="email"],
+.register-tab[type="password"]{
     padding-left: 10px;
     font-family: Roboto, Arial;
     font-size: 17px;
@@ -33,7 +33,7 @@
 
 
 }
-.prijava-tab:focus{
+.register-tab:focus{
     border-width 1px;
     border-color: gray;
     border-style:solid;
@@ -41,7 +41,7 @@
 
 }
 
-.prijava-button[type="submit"]{
+.register-button[type="submit"]{
     width: 200px;
     margin: 0 50px 20px 55px;
     align-items: center;
@@ -53,14 +53,14 @@
     cursor: pointer;
 
 }
-.nalog{
+.profile{
     font-family: Roboto, Arial;
     font-size: 14px;
     font-weight: 400px;
     padding: 0 0 20px 55px;
 
 }
-.uredjivanje-texta{
+.text-edit{
     color: rgb(51, 51, 204);
 }
 .upozorenje{
