Update with fully built CV

--- a/website/templates/cv.html
+++ b/website/templates/cv.html
@@ -3,7 +3,193 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div>DJESI</div>
+<div class="cv">
+        <div class="photo">
+            <img class="profile-picture" src="static/cv-images/profile-picture.jpg">
+            <div class="information">
+                <p class="name">Emir Alić</p>
+                <div class="yellow-line"></div>
+                <p class="personal">Lične informacije</p>
+                <div class="gray-line"></div>
+                <div class="home">
+                    <img class="location-icon" src="static/cv-images/location-icon.png">
+                    <p class="home-adress"><strong>Kuća</strong> :  Čiris 44, 75320, Gračanica, Bosna i Hercegovina</p>
+                </div>
+                <div class="home">
+                    <img class="location-icon" src="static/cv-images/location-icon.png">
+                    <p class="home-adress"><strong>Posao</strong> :  Mustafe Behmena 5A, 71000, Sarajevo, Bosna i Hercegovina</p>
+                </div>
+                <div class="home">
+                    <img class="location-icon" src="static/cv-images/email-icon.png">
+                    <p class="home-adress1"><strong>Email</strong> : emiralic22@gmail.com</p>
+                    <div class="home1">
+                    <img class="location-icon1" src="static/cv-images/phone-icon.png">
+                    <p class="home-adress1"><strong>Broj telefona</strong> :  +38760/3444/321</p>
+                    </div>
+                </div>
+                <div class="home">
+                    <p class="home-adress2"><strong>Spol</strong> : Muški</p>
+                    <div class="home1">
+                    <p class="home-adress1"><strong>Datum rođenja</strong> :  22/08/1997</p>
+                    </div>
+                    <div class="home1">
+                    <p class="home-adress1"><strong>Nacionalnost</strong> :  Bošnjak</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="work-experience-text">RADNO ISKUSTVO</p>
+        <div class="work-experience">
+            <p>[ 27/06/2016 – Trenutno ]</p>
+                <div class="explanation">
+                    <p class="jobs"> <strong>Pozicija</strong> : Voditelj i editor Youtube kanala</p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Naziv</strong> : </p>
+                        <a href="http://127.0.0.1:5000/youtube">
+                            <p class="jobs1">The BallGame</p>
+                        </a>
+                    </div>
+                    <p class="jobs"> <strong>Grad</strong> : Gračanica</p>
+                    <p class="jobs"> <strong>Država</strong> : Bosna i Hercegovina</p>
+                    <p class="jobs"> <strong>Opis posla</strong> : Voditelj i editor vlastitog Youtube kanala - dodatni (studentski) posao za samostalno finansiranje tokom studiranja</p>
+                </div>
+        </div>
+        <div class="work-experience">
+            <p>[ 30/04/2016 – 29/09/2016 ]</p>
+                <div class="explanation1">
+                    <p class="jobs"> <strong>Pozicija</strong> : Asistent mašinskog inženjera</p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Kompanija</strong> : </p>
+                        <a href="https://hstcnc.com/">
+                            <p class="jobs1">CNC-HST Technik</p>
+                        </a>
+                    </div>
+                    <p class="jobs"> <strong>Grad</strong> : Gračanica</p>
+                    <p class="jobs"> <strong>Država</strong> : Bosna i Hercegovina</p>
+                    <p class="jobs"> <strong>Opis posla</strong> : Pomaganje i praćenje rada mašinskog inženjera u svrhu sticanja što većeg znanja i iskustva</p>
+                </div>
+        </div>
+        <div class="work-experience">
+            <p>[ 08/12/2021 – 17/12/2021 ]</p>
+                <div class="explanation1">
+                    <p class="jobs"> <strong>Pozicija</strong> : Volonter</p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Naziv</strong> : </p>
+                        <a href="https://www.fls.ba/">
+                            <p class="jobs1">Futures Leaders Summit</p>
+                        </a>
+                    </div>
+                    <p class="jobs"> <strong>Grad</strong> : Tuzla</p>
+                    <p class="jobs"> <strong>Država</strong> : Bosna i Hercegovina</p>
+                    <p class="jobs"> <strong>Opis posla</strong> : Volontiranje u pripremi, organizaciji i tokom održavanja Future Leaders Summit-a u Tuzli</p>
+                </div>
+        </div>
+        <div class="work-experience">
+            <p>[ 12/07/2022 – 19/07/2022 ]</p>
+                <div class="explanation1">
+                    <p class="jobs"> <strong>Pozicija</strong> : Mašinski inženjer(praksa)</p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Kompanija</strong> : </p>
+                        <a href="https://www.ttuenergetik.ba/">
+                            <p class="jobs1">TTU energetik d.o.o</p>
+                        </a>
+                    </div>
+                    <p class="jobs"> <strong>Grad</strong> : Tuzla</p>
+                    <p class="jobs"> <strong>Država</strong> : Bosna i Hercegovina</p>
+                    <p class="jobs"> <strong>Opis posla</strong> : Skiciranje datih komada na papir, zatim crtanje i modeliranje 3d modela u SolidWorks-u, te izrada potpune tehničke dokumentacije. Izrada kompletnog procesa tehnologije izrade datih komada, te upoznavanje sa odgovarajućim standardima i propisima kojih se mašinski inženjer treba pridržavati </p>
+                </div>
+        </div>
+        <div class="bottom-border"></div>
+        <p class="work-experience-text">OBRAZOVANJE I OBUKA</p>
+        <div class="work-experience">
+            <p>[ 02/10/2016 – Trenutno ]</p>
+                <div class="explanation">
+                    <p class="jobs"> <strong>Pozicija</strong> : Mašinski inženjer</p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Ustanova</strong> : </p>
+                        <a href="http://mf.untz.ba//">
+                            <p class="jobs1">Mašinski fakultet,</p>
+                        </a>
+                        <a href="http://untz.ba/">
+                            <p class="jobs1">Univerzitet u Tuzli</p>
+                        </a>
+                    </div>
+
+                    <p class="jobs"> <strong>Grad</strong> : Tuzla</p>
+                    <p class="jobs"> <strong>Država</strong> : Bosna i Hercegovina</p>
+                    <p class="jobs"> <strong>Smjer</strong> : Proizvodno mašinstvo</p>
+                </div>
+        </div>
+        <div class="work-experience">
+            <p>[ 10/03/2022 – 20/04/2022 ]</p>
+                <div class="explanation1">
+                    <p class="jobs"> <strong>Pozicija</strong> : ABB Robot Studio Programer</p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Kompanija</strong> : </p>
+                        <a href="https://dkr.ba/">
+                            <p class="jobs1">DKR - German Center For Robotics</p>
+                        </a>
+                    </div>
+                    <p class="jobs"> <strong>Grad</strong> : Tuzla</p>
+                    <p class="jobs"> <strong>Država</strong> : Bosna i Hercegovina</p>
+                    <p class="jobs"> <strong>Smjer</strong> : Proizvodno mašinstvo</p>
+                </div>
+        </div>
+        <div class="work-experience">
+            <p>[ 20/11/2022 – 05/12/2022 ]</p>
+                <div class="explanation1">
+                    <p class="jobs"> <strong>Pozicija</strong> : Python/Flask Backend Developer</p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Kompanija</strong> : </p>
+                        <a href="https://www.tech387.com/">
+                            <p class="jobs1">Tech387 - Product Arena</p>
+                        </a>
+                    </div>
+                    <p class="jobs"> <strong>Grad</strong> : Tuzla</p>
+                    <p class="jobs"> <strong>Država</strong> : Bosna i Hercegovina</p>
+                    <p class="jobs"> <strong>Smjer</strong> : Proizvodno mašinstvo</p>
+                </div>
+        </div>
+        <div class="bottom-border"></div>
+        <p class="work-experience-text">POZNAVANJE JEZIKA</p>
+        <div class="work-experience">
+                <div class="explanation2">
+                    <p class="jobs"> <strong>Maternji jezik</strong> : Bosanski jezik</p>
+                    <p class="jobs"> <strong>Drugi jezici</strong> : Engleski jezik, Njemački jezik</p>
+                    <p class="jobs"> <strong>Engleski jezik : </strong> </p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Slušanje</strong> : C1</p>
+                        <p class="jobs2"> <strong>Čitanje</strong> : C1</p>
+                        <p class="jobs2"> <strong>Pisanje</strong> : C1</p>
+                        <p class="jobs2"> <strong>Pričanje</strong> : C1</p>
+
+                    </div>
+                    <p class="jobs"> <strong>Njemački jezik : </strong> </p>
+                    <div class="company">
+                        <p class="jobs"> <strong>Slušanje</strong> : A1</p>
+                        <p class="jobs2"> <strong>Čitanje</strong> : A2</p>
+                        <p class="jobs2"> <strong>Pisanje</strong> : A1</p>
+                        <p class="jobs2"> <strong>Pričanje</strong> : A1</p>
+                    </div>
+                </div>
+        </div>
+        <div class="bottom-border"></div>
+        <p class="work-experience-text">VJEŠTINE</p>
+        <div class="work-experience">
+                <div class="explanation2">
+                    <p class="jobs3">Python| Flask| HTML| CSS| PyCharm| SolidWorks| AutoCAD| CATIA| ABB Robot Studio| Research| Microsoft Word| Microsoft Excel| Video Editing(Sony Vegas)| </p>
+                </div>
+        </div>
+        <div class="bottom-border"></div>
+        <p class="work-experience-text">VOZAČKA DOZVOLA</p>
+        <div class="work-experience">
+            <div class="explanation2">
+                <p class="jobs"> <strong>Kategorija</strong> : B1| B|</p>
+            </div>
+        </div>
+        <div class="bottom-border1"></div>
+
+</div>
 
 
 
