--- a/website/static/cv.css
+++ b/website/static/cv.css
@@ -1,1 +1,147 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+body{
+   background-color: rgb(217, 217, 217);
+
+}
+.cv{}
+.photo{
+    display: flex;
+    flex-direction: row;
+    padding-left: 150px;
+    position: relative;
+    background-color: rgb(217, 217, 217);
+    padding-bottom: 10px;
+    border-top: 1px solid rgb(77, 77, 255);
+    border-bottom: 1px solid rgb(77, 77, 255);
+
+
+}
+.information{
+    display: flex;
+    flex-direction: column;
+
+}
+.profile-picture{
+    margin-top: 30px;
+    height: 200px;
+    border-radius: 100px;
+    border: 4px solid white;
+}
+.name,
+.personal{
+    font-family: Roboto, Arial;
+    font-size: 30px;
+    font-weight: 400;
+    color: rgb(66, 66, 66);
+    padding: 30px 0 0 40px;
+}
+.yellow-line,
+.gray-line{
+    height: 2px;
+    width: 550px;
+    margin: 5px 0 0 40px;
+    background-color: rgb(255, 77, 77);
+}
+.personal{
+    font-size: 20px;
+    padding-top: 15px;
+
+}
+.gray-line{
+    height: 2px;
+    background-color: gray;
+}
+.home,
+.home1{
+    display: flex;
+    flex-direction: row;
+    padding: 10px 0 0 40px;
+
+}
+.location-icon,
+.location-icon1{
+    height: 20px;
+}
+.home-adress,
+.home-adress1,
+.home-adress2{
+    font-family: Roboto, Arial;
+    font-size: 15px;
+    font-weight: 400;
+    padding-left: 10px;
+}
+.home1{
+    padding:0 0 0 10px;
+
+}
+.home-adress1{
+    padding-left: 4px;
+}
+.home-adress2{
+    padding-left: 24px;
+}
+.work-experience-text{
+    font-family: Roboto, Arial;
+    font-size: 20px;
+    color: rgb(255, 77, 77);
+    padding: 15px 0 0 170px;
+}
+.work-experience{
+    display: flex;
+    flex-direction: row;
+    padding: 10px 0 0 150px;
+    position: relative;
+    background-color: rgb(217, 217, 217);
+    padding-bottom: 10px;
+    border-top: 1px solid rgb(77, 77, 255);
+}
+.explanation,
+.explanation1,
+.explanation2{
+    display: flex:
+    flex-direction: column;
+    padding-left: 70px;
+    margin-top: -3px;
+}
+.jobs,
+.jobs1,
+.jobs2,
+.jobs3{
+    font-family: Roboto, Arial;
+    font-size: 15px;
+    font-weight: 400;
+    max-width: 500px;
+    padding-top: 3px;
+}
+.explanation1{
+    padding-left: 50px;
+}
+.bottom-border,
+.bottom-border1{
+   height: 0.5px;
+   background-color: rgb(77, 77, 255);
+   margin: 3px 0 3px 0;
+
+}
+
+.company{
+    display: flex;
+    flex-direction; row;
+}
+.jobs1{
+    padding: 5px 0 0 5px;
+    text-decoration: underline;
+    color: black;
+}
+.explanation2{
+    padding-left: 273px;
+}
+.jobs2{
+    padding-left: 5px;
+}
+.jobs3{
+    max-width: 470px;
+}
+.bottom-border1{
+    margin: 0 0 2px 0;
+}
