Update with finished cv and few updates of linkedin profile

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,7 +13,7 @@
             <ul>
                 {% if korisnik.is_authenticated%}
                 <li><a id="home" href="/home">Početna stranica</a></li>
-                <li><a id="omeni" href="/omeni">O meni&#9660;</a>
+                <li><a id="omeni" >O meni&#9660;</a>
                     <ul class="dropdown">
                         <li><a id="cv" href="/cv">CV</a></li>
                         <li><a id="mpismo" href="/mpismo">Motivaciono pismo</a></li>
