--- a/website/static/youtube-css/header.css
+++ b/website/static/youtube-css/header.css
@@ -1,13 +1,12 @@
 .header{
       display:flex;
       flex-direction:row;
-      width: 1519.2px;
+      width: 100%;
       position:fixed;
       background-color: white;
       top:0;
       left:0;
       right:0;
-      border-bottom-width: 1px;
       padding-top: 8px;
       border-bottom-width: 2px;
       z-index:100;
