--- a/website/templates/cv.html
+++ b/website/templates/cv.html
@@ -9,33 +9,40 @@
             <div class="information">
                 <p class="name">Emir Alić</p>
                 <div class="yellow-line"></div>
-                <p class="personal">Lične informacije</p>
-                <div class="gray-line"></div>
-                <div class="home">
-                    <img class="location-icon" src="static/cv-images/location-icon.png">
-                    <p class="home-adress"><strong>Kuća</strong> :  Čiris 44, 75320, Gračanica, Bosna i Hercegovina</p>
+                <div class="expand">
+                    <input class="box" type="checkbox" id="trigger"/>
+                    <label for="trigger" >Lične informacije</label>
+                        <div class="all-text">
+                            <div class="gray-line"></div>
+                            <div class="home">
+                                <img class="location-icon" src="static/cv-images/location-icon.png">
+                                <p class="home-adress"><strong>Kuća</strong> :  Čiris 44, 75320, Gračanica, Bosna i Hercegovina</p>
+                            </div>
+                            <div class="home">
+                                <img class="location-icon" src="static/cv-images/location-icon.png">
+                                <p class="home-adress"><strong>Posao</strong> :  Mustafe Behmena 5A, 71000, Sarajevo, Bosna i Hercegovina</p>
+                            </div>
+                            <div class="home">
+                                <img class="location-icon" src="static/cv-images/email-icon.png">
+                                <p class="home-adress1"><strong>Email</strong> : emiralic22@gmail.com</p>
+                                <div class="home1">
+                                <img class="location-icon1" src="static/cv-images/phone-icon.png">
+                                <p class="home-adress1"><strong>Broj telefona</strong> :  +38760/3444/321</p>
+                                </div>
+                            </div>
+                            <div class="home">
+                                <p class="home-adress2"><strong>Spol</strong> : Muški</p>
+                                <div class="home1">
+                                <p class="home-adress1"><strong>Datum rođenja</strong> :  22/08/1997</p>
+                                </div>
+                                <div class="home1">
+                                <p class="home-adress1"><strong>Nacionalnost</strong> :  Bošnjak</p>
+                                </div>
+                            </div>
+                        </div>
+
                 </div>
-                <div class="home">
-                    <img class="location-icon" src="static/cv-images/location-icon.png">
-                    <p class="home-adress"><strong>Posao</strong> :  Mustafe Behmena 5A, 71000, Sarajevo, Bosna i Hercegovina</p>
-                </div>
-                <div class="home">
-                    <img class="location-icon" src="static/cv-images/email-icon.png">
-                    <p class="home-adress1"><strong>Email</strong> : emiralic22@gmail.com</p>
-                    <div class="home1">
-                    <img class="location-icon1" src="static/cv-images/phone-icon.png">
-                    <p class="home-adress1"><strong>Broj telefona</strong> :  +38760/3444/321</p>
-                    </div>
-                </div>
-                <div class="home">
-                    <p class="home-adress2"><strong>Spol</strong> : Muški</p>
-                    <div class="home1">
-                    <p class="home-adress1"><strong>Datum rođenja</strong> :  22/08/1997</p>
-                    </div>
-                    <div class="home1">
-                    <p class="home-adress1"><strong>Nacionalnost</strong> :  Bošnjak</p>
-                    </div>
-                </div>
+
             </div>
         </div>
         <p class="work-experience-text">RADNO ISKUSTVO</p>
