--- a/website/static/cv.css
+++ b/website/static/cv.css
@@ -27,8 +27,58 @@ body{
     border-radius: 100px;
     border: 4px solid white;
 }
-.name,
-.personal{
+.expand{
+
+}
+.all-text{
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+}
+input{
+    display:none;
+
+}
+label{
+    font-family: Roboto, Arial;
+    font-size: 24px;
+    font-weight: 400;
+    display: block;
+    cursor: pointer;
+    color: rgb(66, 66, 66);
+    position: relative;
+    padding: 12px 0 0 60px;
+    user-select: none;
+
+
+}
+label:before {
+    content: " ";
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent
+    transparent transparent black;
+    height: 0;
+    font-size: 0;
+    position: absolute;
+    top: 17px;
+    left:5px;
+    margin-left: 35px;
+    transition transform 0.5s;
+    transition-origin: 3px center;
+}
+input:checked ~ label:before{
+    transform: rotate(90deg);
+
+}
+input:checked ~ .all-text{
+    opacity: 1;
+    height: auto;
+
+}
+
+
+.name{
     font-family: Roboto, Arial;
     font-size: 30px;
     font-weight: 400;
@@ -42,11 +92,7 @@ body{
     margin: 5px 0 0 40px;
     background-color: rgb(255, 77, 77);
 }
-.personal{
-    font-size: 20px;
-    padding-top: 15px;
 
-}
 .gray-line{
     height: 2px;
     background-color: gray;
