New updates on linkedin profile page

--- a/website/templates/linkedin.html
+++ b/website/templates/linkedin.html
@@ -1,7 +1,10 @@
 <!doctype html >
 <head>
     <title> Linkedin </title>
-    <link rel="stylesheet" href="static/linkedin.css">
+    <link rel="stylesheet" href="static/linkedin-css/linkedin-header.css">
+    <link rel="stylesheet" href="static/linkedin-css/linkedin-left-part.css">
+    <link rel="stylesheet" href="static/linkedin-css/linkedin-right-part.css">
+
 
 </head>
 <body>
@@ -69,8 +72,92 @@
 
 
         </div>
+        <div class="page">
+            <div class="left-part">
+                <img class="background-photo" src="static/linkedin-images/left-part-images/background-photo.jfif">
+                <img class="profile-photo" src="static/linkedin-images/left-part-images/profile-photo.jfif">
+                <div class="name-and-university">
+                    <div class="name">
+                       Emir Alić
+                    </div>
+                    <div class="university">
+                        <img class="university-photo" src="static/linkedin-images/left-part-images/university-logo.png">
+                        <div class="university-name">
+                            Univerzitet u Tuzli
+                        </div>
+                    </div>
+                </div>
+                <div class="description">
+                    Final-year Mechanical Engineering student
+                </div>
+                <div class="city-adress">
+                    Tuzla, Federation of Bosnia and Herzegovina, Bosnia and Herzegovina
+                </div>
+                <div class="contact-info">
+                    Contact info
+                </div>
+                <div class="connections">
+                    182 connections
+                </div>
+                <div class="three-buttons">
+                    <button class="open-to">
+                       <div class="open-to-text">
+                           Open to
+                       </div>
+                    </button>
+                    <button class="add-profile">
+                        <div class="add-profile-text">
+                            Add profile section
+                        </div>
+                    </button>
+                    <button class="more-button">
+                        <div class="more-text">
+                            More
+                        </div>
+                    </button>
+                </div>
+                <div class="open-to-work">
+                    <div class="open-to-work-text">
+                        Open to work
+                    </div>
+                    <div class="roles-text">
+                        Mechanical Engineer and Computer Aided Design Designer roles
+                    </div>
+                    <div class="details-text">
+                        See all details
+                    </div>
+                </div>
+            </div>
+            <div class="right-part">
+                <div class="text-and-question">
+                    <div class="edit-public-profile-text">
+                    Edit public profile & URL
+                    </div>
+                    <button class="question-mark">
+                        <div class="question-mark-text">
+                            ?
+                        </div>
+                    </button>
+                </div>
+                <div class="line-between">
+                </div>
+                <div class="text-and-question">
+                    <div class="add-profile-in-another-language-text">
+                    Add profile in another language
+                    </div>
+                    <button class="question-mark1">
+                        <div class="question-mark-text1">
+                            ?
+                        </div>
+                    </button>
+                </div>
+
+
+            </div>
+        </div>
 
 
 
     </div>
 </body>
+
