--- a/website/static/linkedin-css/linkedin-header.css
+++ b/website/static/linkedin-css/linkedin-header.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');body{
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+body{
     margin:0;
+    background-color: rgb(255, 249, 230);
+
 }
 .header{
     display: flex;
@@ -91,5 +94,4 @@
     text-decoration: underline;
     margin: 2px;
     padding-top: 2px;
-
 }
